force-app/main/default/objects/True_Signed__mdt/True_Signed__mdt.object-meta.xml
<CustomObject>
    <label>True Signed</label>
    <pluralLabel>True Signeds</pluralLabel>
</CustomObject>