force-app/main/default/objects/True_Signed__mdt/fields/callBackURL__c.field-meta.xml
<CustomField>
    <fullName>callBackURL__c</fullName>
    <label>callBackURL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>