force-app/main/default/objects/True_Signed__mdt/fields/data_type__c.field-meta.xml
<CustomField>
    <fullName>data_type__c</fullName>
    <label>data_type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>