force-app/main/default/objects/True_Signed__mdt/fields/Initiator__c.field-meta.xml
<CustomField>
    <fullName>Initiator__c</fullName>
    <label>Initiator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>