force-app/main/default/objects/True_Signed__mdt/fields/SignedDocumentUrl__c.field-meta.xml
<CustomField>
    <fullName>SignedDocumentUrl__c</fullName>
    <label>SignedDocumentUrl</label>
    <length>255</length>
    <type>Text</type>
</CustomField>