force-app/main/default/objects/True_Signed__mdt/fields/uploadfileURL__c.field-meta.xml
<CustomField>
    <fullName>uploadfileURL__c</fullName>
    <label>uploadfileURL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>