force-app/main/default/objects/True_Signed__mdt/fields/Workflow_Id__c.field-meta.xml
<CustomField>
    <fullName>Workflow_Id__c</fullName>
    <label>Workflow_Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>